<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lock Screen Vocabulary</string>
    <string name="app_name_settings">Lock Screen Vocabulary Settings</string>
	<string name="notification_clickme">Click here for another question</string>

    <string name="instructions">Click on UNLOCK button to unlock the screen</string>
    <string name="unlock">UNLOCK</string>
	
	<string name="settings_title">Settings</string>
	<string name="settings_tts">Read out loud</string>
	<string name="settings_language">I am learning</string>
	<string name="settings_difficulty">Difficulty</string>
	<string name="settings_security">Use PIN Lock</string>
	<string name="settings_password">PIN</string>
	<string name="btn_save">Save</string>
	<string name="quit">Exit</string>
	
</resources>
